--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instruction Cyber</title>
+    <title>Instruction</title>
 
     <!-- BS4 CSS -->
     <!-- C1: CDN -->
